--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -1,4 +1,7 @@
 body {
-  //background: url(../../assets/images/image2@2x.jpg);
-  background: red;
+    background: lightpink;
+}
+
+a {
+    display: block;
 }
