--- a/src/hw_7/hw_7.scss
+++ b/src/hw_7/hw_7.scss
@@ -15,8 +15,6 @@
 }
 
 .page-nav {
-    padding-top: 30px;
-    background-color: #313a5a;
     color: #ffffff;
     &__header {
         display: inline-block;
@@ -61,4 +59,94 @@
         height: 40px;
         margin-left: 37px;
     }
+}
+
+.main {
+    padding-top: 30px;
+    background-color: #313a5a;
+    &__concept {
+        margin: 0 auto;
+        display: flex;
+        margin: 0 -16px;
+    }
+    &__column {
+        flex: 1 1 50%;
+        max-width: 50%;
+        margin: 0 16px;
+    }
+    &__menu {
+        margin-bottom: 55px;
+    }
+    &__content {
+        margin: 0 auto;
+        padding-top: 120px;
+    }
+    &__header {
+        color: #ffffff;
+        font-size: 48px;
+        margin-bottom: 40px;
+    }
+    &__text {
+        @include fonts;
+        margin-bottom: 35px;
+    }
+    &__button {
+        width: 200px;
+        height: 60px;
+    }
+    &__image {
+        display: inline-block;
+        margin: 0 auto;
+    }
+}
+
+.image {
+    height: 792px;
+    width: 463px;
+    vertical-align: top;
+}
+
+.advantages {
+    padding: 66px 30px;
+    position: absolute;
+    top: 810px;
+    left: 91px;
+    display: flex;
+    text-align: left;
+    width: 1167px;
+    border-radius: 10px;
+    box-shadow: 0 10px 34px 0 rgba(210, 210, 210, 0.5);
+    background-color: #ffffff;
+    font-size: 16px;
+    &__column {
+        flex: 1 1 33.333%;
+        max-width: 33.333%;
+        margin: 0 40px;
+    }
+    &__icon {
+        display: inline-block;
+        opacity: 0.1;
+        padding: 15px;
+        border-radius: 6px;
+        background-color: rgb(31, 219, 132);
+    }
+    &__header {
+        color: #031d5b;
+        margin-top: 26px;
+    }
+    &__line {
+        margin-top: 28px;
+        width: 60px;
+        height: 4px;
+        background-color: #1fdb84;
+    }
+    &__text {
+        color: #5b6c94;
+        margin-top: 18px;
+    }
+}
+
+.icon {
+    width: 40px;
+    height: 40px;
 }
